--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <div class="odd 1"><p>Number 1 - I'm a class!</p></div>
+    <div id="two">Number 2 - I'm one ID.</div>
+    <div class="odd"id="three"><p>Number 3 - I'm a class, but cooler!</p></div>
+    <div id="four">Number 4 - I'm another ID.</div>
+    <div class="odd 5"><p>Number 5 - I'm a class!</p></div>
   </body>
 </html>
